--- a/midterm/.gitignore
+++ b/midterm/.gitignore
@@ -4,3 +4,7 @@ __pycache__/
 .DS_Store
 data/processed/
 *.csv
+# Ignore other PDFs and binary files except grid_code.pdf
+*.pdf
+!data/raw/grid_code.pdf
+*.docx
