--- a/midterm/requirements.txt
+++ b/midterm/requirements.txt
@@ -1,12 +1,13 @@
-langchain
-langchain-openai
-langchain-community
-langgraph
-streamlit
-python-dotenv
-requests
-qdrant-client
-pypdf
-tiktoken
-openai
-rapidfuzz
+streamlit>=1.32.0
+langchain>=0.1.9
+langchain-core>=0.1.27
+langchain-openai>=0.0.8
+langchain-community>=0.0.24
+python-dotenv>=1.0.0
+requests>=2.31.0
+langgraph>=0.0.26
+qdrant-client>=1.7.3
+pypdf>=4.0.1
+openai>=1.12.0
+typing-extensions>=4.9.0
+pydantic>=2.6.3
