--- a/midterm/requirements.txt
+++ b/midterm/requirements.txt
@@ -1,13 +1,14 @@
 streamlit>=1.32.0
-langchain>=0.1.9
-langchain-core>=0.1.27
-langchain-openai>=0.0.8
-langchain-community>=0.0.24
+langchain==0.3.19
+langchain-core==0.3.37
+langchain-openai==0.3.6
+langchain-huggingface==0.1.2
+langchain-community>=0.3.14
 python-dotenv>=1.0.0
 requests>=2.31.0
-langgraph>=0.0.26
+langgraph==0.2.74
 qdrant-client>=1.7.3
 pypdf>=4.0.1
-openai>=1.12.0
+openai==1.64.0
 typing-extensions>=4.9.0
 pydantic>=2.6.3
