feat: retrieval comparison (without cost from langsmith)

--- a/13_Advanced_Retrieval/pyproject.toml
+++ b/13_Advanced_Retrieval/pyproject.toml
@@ -12,4 +12,7 @@ dependencies = [
     "langchain-openai>=0.3.7",
     "qdrant-client>=1.13.2",
     "rank-bm25>=0.2.2",
+    "ragas>=0.2.13",
+    "rapidfuzz>=3.12.2",
+    "rich>=13.9.4",
 ]
